elasticsearch-fix