@@ -51,23 +51,15 @@ import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xcontent.XContentParserConfiguration;
 import org.elasticsearch.xcontent.XContentType;
 import org.elasticsearch.xpack.core.template.TemplateUtils;
-import org.elasticsearch.xpack.fleet.action.DeleteSecretAction;
 import org.elasticsearch.xpack.fleet.action.GetGlobalCheckpointsAction;
 import org.elasticsearch.xpack.fleet.action.GetGlobalCheckpointsShardAction;
-import org.elasticsearch.xpack.fleet.action.GetSecretAction;
-import org.elasticsearch.xpack.fleet.action.PostSecretAction;
-import org.elasticsearch.xpack.fleet.action.TransportDeleteSecretAction;
-import org.elasticsearch.xpack.fleet.action.TransportGetSecretAction;
-import org.elasticsearch.xpack.fleet.action.TransportPostSecretAction;
-import org.elasticsearch.xpack.fleet.rest.RestDeleteSecretsAction;
 import org.elasticsearch.xpack.fleet.rest.RestFleetMultiSearchAction;
 import org.elasticsearch.xpack.fleet.rest.RestFleetSearchAction;
 import org.elasticsearch.xpack.fleet.rest.RestGetGlobalCheckpointsAction;
-import org.elasticsearch.xpack.fleet.rest.RestGetSecretsAction;
-import org.elasticsearch.xpack.fleet.rest.RestPostSecretsAction;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.EnumSet;
 import java.util.List;
@@ -83,21 +75,10 @@ import static org.elasticsearch.xpack.core.ClientHelper.FLEET_ORIGIN;
  */
 public class Fleet extends Plugin implements SystemIndexPlugin {
 
-    public static final String FLEET_SECRETS_INDEX_NAME = ".fleet-secrets";
-
     private static final int CURRENT_INDEX_VERSION = 7;
     private static final String VERSION_KEY = "version";
     private static final String MAPPING_VERSION_VARIABLE = "fleet.version";
     private static final List<String> ALLOWED_PRODUCTS = List.of("kibana", "fleet");
-    private static final int FLEET_ACTIONS_MAPPINGS_VERSION = 1;
-    private static final int FLEET_AGENTS_MAPPINGS_VERSION = 1;
-    private static final int FLEET_ENROLLMENT_API_KEYS_MAPPINGS_VERSION = 1;
-    private static final int FLEET_SECRETS_MAPPINGS_VERSION = 1;
-    private static final int FLEET_POLICIES_MAPPINGS_VERSION = 1;
-    private static final int FLEET_POLICIES_LEADER_MAPPINGS_VERSION = 1;
-    private static final int FLEET_SERVERS_MAPPINGS_VERSION = 1;
-    private static final int FLEET_ARTIFACTS_MAPPINGS_VERSION = 1;
-    private static final int FLEET_ACTIONS_RESULTS_MAPPINGS_VERSION = 1;
 
     @Override
     public Collection<Object> createComponents(
@@ -158,7 +139,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private SystemIndexDescriptor fleetActionsSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-actions.json", FLEET_ACTIONS_MAPPINGS_VERSION), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-actions.json"), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -176,7 +157,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private SystemIndexDescriptor fleetAgentsSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-agents.json", FLEET_AGENTS_MAPPINGS_VERSION), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-agents.json"), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -194,10 +175,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private SystemIndexDescriptor fleetEnrollmentApiKeysSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(
-            loadTemplateSource("/fleet-enrollment-api-keys.json", FLEET_ENROLLMENT_API_KEYS_MAPPINGS_VERSION),
-            XContentType.JSON
-        );
+        request.source(loadTemplateSource("/fleet-enrollment-api-keys.json"), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -215,23 +193,24 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private SystemIndexDescriptor fleetSecretsSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-secrets.json", FLEET_SECRETS_MAPPINGS_VERSION), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-secrets.json"), XContentType.JSON);
         return SystemIndexDescriptor.builder()
-            .setType(Type.INTERNAL_MANAGED)
+            .setType(Type.EXTERNAL_MANAGED)
+            .setAllowedElasticProductOrigins(ALLOWED_PRODUCTS)
             .setOrigin(FLEET_ORIGIN)
             .setVersionMetaKey(VERSION_KEY)
             .setMappings(request.mappings())
             .setSettings(request.settings())
-            .setPrimaryIndex(FLEET_SECRETS_INDEX_NAME + "-" + CURRENT_INDEX_VERSION)
-            .setIndexPattern(FLEET_SECRETS_INDEX_NAME + "*")
-            .setAliasName(FLEET_SECRETS_INDEX_NAME)
+            .setPrimaryIndex(".fleet-secrets-" + CURRENT_INDEX_VERSION)
+            .setIndexPattern(".fleet-secrets*")
+            .setAliasName(".fleet-secrets")
             .setDescription("Secret values managed by Fleet")
             .build();
     }
 
     private SystemIndexDescriptor fleetPoliciesSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-policies.json", FLEET_POLICIES_MAPPINGS_VERSION), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-policies.json"), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -249,7 +228,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private SystemIndexDescriptor fleetPoliciesLeaderSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-policies-leader.json", FLEET_POLICIES_LEADER_MAPPINGS_VERSION), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-policies-leader.json"), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -267,7 +246,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private SystemIndexDescriptor fleetServersSystemIndexDescriptors() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-servers.json", FLEET_SERVERS_MAPPINGS_VERSION), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-servers.json"), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -285,7 +264,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private SystemIndexDescriptor fleetArtifactsSystemIndexDescriptors() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-artifacts.json", FLEET_ARTIFACTS_MAPPINGS_VERSION), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-artifacts.json"), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -302,7 +281,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
     }
 
     private SystemDataStreamDescriptor fleetActionsResultsDescriptor() {
-        final String source = loadTemplateSource("/fleet-actions-results.json", FLEET_ACTIONS_RESULTS_MAPPINGS_VERSION);
+        final String source = loadTemplateSource("/fleet-actions-results.json");
         try (XContentParser parser = XContentType.JSON.xContent().createParser(XContentParserConfiguration.EMPTY, source)) {
             ComposableIndexTemplate composableIndexTemplate = ComposableIndexTemplate.parse(parser);
             return new SystemDataStreamDescriptor(
@@ -357,23 +336,15 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
         }
     }
 
-    private String loadTemplateSource(String resource, int mappingsVersion) {
-        return TemplateUtils.loadTemplate(
-            resource,
-            Version.CURRENT.toString(),
-            MAPPING_VERSION_VARIABLE,
-            Map.of("fleet.managed.index.version", Integer.toString(mappingsVersion))
-        );
+    private String loadTemplateSource(String resource) {
+        return TemplateUtils.loadTemplate(resource, Version.CURRENT.toString(), MAPPING_VERSION_VARIABLE);
     }
 
     @Override
     public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
-        return List.of(
+        return Arrays.asList(
             new ActionHandler<>(GetGlobalCheckpointsAction.INSTANCE, GetGlobalCheckpointsAction.TransportAction.class),
-            new ActionHandler<>(GetGlobalCheckpointsShardAction.INSTANCE, GetGlobalCheckpointsShardAction.TransportAction.class),
-            new ActionHandler<>(GetSecretAction.INSTANCE, TransportGetSecretAction.class),
-            new ActionHandler<>(PostSecretAction.INSTANCE, TransportPostSecretAction.class),
-            new ActionHandler<>(DeleteSecretAction.INSTANCE, TransportDeleteSecretAction.class)
+            new ActionHandler<>(GetGlobalCheckpointsShardAction.INSTANCE, GetGlobalCheckpointsShardAction.TransportAction.class)
         );
     }
 
@@ -387,13 +358,10 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
         IndexNameExpressionResolver indexNameExpressionResolver,
         Supplier<DiscoveryNodes> nodesInCluster
     ) {
-        return List.of(
+        return Arrays.asList(
             new RestGetGlobalCheckpointsAction(),
             new RestFleetSearchAction(restController.getSearchUsageHolder()),
-            new RestFleetMultiSearchAction(settings, restController.getSearchUsageHolder()),
-            new RestGetSecretsAction(),
-            new RestPostSecretsAction(),
-            new RestDeleteSecretsAction()
+            new RestFleetMultiSearchAction(settings, restController.getSearchUsageHolder())
         );
     }
 }
