@@ -21,7 +21,6 @@ import org.elasticsearch.common.unit.ByteSizeValue;
 import org.elasticsearch.core.Tuple;
 import org.elasticsearch.persistent.PersistentTasksCustomMetadata;
 import org.elasticsearch.test.ESTestCase;
-import org.elasticsearch.xpack.core.ml.MlConfigVersion;
 import org.elasticsearch.xpack.core.ml.MlTasks;
 import org.elasticsearch.xpack.core.ml.action.StartDataFrameAnalyticsAction;
 import org.elasticsearch.xpack.core.ml.action.StartDataFrameAnalyticsAction.TaskParams;
@@ -114,9 +113,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             Long.toString(machineMemory),
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            Long.toString(machineMemory / 2),
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            Long.toString(machineMemory / 2)
         );
 
         ClusterState.Builder cs = fillNodesWithRunningJobs(nodeAttr, numNodes, maxRunningJobsPerNode);
@@ -162,9 +159,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             Long.toString(machineMemory),
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            Long.toString(machineMemory / 2),
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            Long.toString(machineMemory / 2)
         );
 
         ClusterState.Builder cs = fillNodesWithRunningJobs(nodeAttr, numNodes, maxRunningJobsPerNode);
@@ -216,9 +211,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             Long.toString(machineMemory),
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            Long.toString(machineMemory / 2),
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            Long.toString(machineMemory / 2)
         );
 
         ClusterState.Builder cs = fillNodesWithRunningJobs(nodeAttr, numNodes, currentlyRunningJobsPerNode);
@@ -272,9 +265,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             String.valueOf(ByteSizeValue.ofGb(1).getBytes()),
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            String.valueOf(ByteSizeValue.ofMb(400).getBytes()),
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            String.valueOf(ByteSizeValue.ofMb(400).getBytes())
         );
 
         ClusterState.Builder cs = fillNodesWithRunningJobs(nodeAttr, numNodes, 1, JobState.OPENED, null);
@@ -311,9 +302,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             Long.toString(machineMemory),
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            Long.toString(machineMemory / 2),
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            Long.toString(machineMemory / 2)
         );
 
         ClusterState.Builder cs = fillNodesWithRunningJobs(nodeAttr, numNodes, 0);
@@ -370,9 +359,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             Long.toString(machineMemory),
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            Long.toString(machineMemory / 2),
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            Long.toString(machineMemory / 2)
         );
 
         ClusterState.Builder cs = fillNodesWithRunningJobs(nodeAttr, numNodes, currentlyRunningJobsPerNode);
@@ -428,9 +415,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             Long.toString(machineMemory),
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            Long.toString(machineMemory / 2),
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            Long.toString(machineMemory / 2)
         );
 
         ClusterState.Builder cs = fillNodesWithRunningJobs(nodeAttr, numNodes, 0);
@@ -524,9 +509,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             "1000000000",
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            "400000000",
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            "400000000"
         );
         DiscoveryNodes nodes = DiscoveryNodes.builder()
             .add(
@@ -658,9 +641,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             "1000000000",
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            "400000000",
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            "400000000"
         );
         DiscoveryNodes nodes = DiscoveryNodes.builder()
             .add(
@@ -755,9 +736,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             "1000000000",
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            "400000000",
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            "400000000"
         );
         DiscoveryNodes nodes = DiscoveryNodes.builder()
             .add(
@@ -789,7 +768,7 @@ public class JobNodeSelectorTests extends ESTestCase {
 
         Job job = mock(Job.class);
         when(job.getId()).thenReturn("incompatible_type_job");
-        when(job.getJobVersion()).thenReturn(MlConfigVersion.CURRENT);
+        when(job.getJobVersion()).thenReturn(Version.CURRENT);
         when(job.getJobType()).thenReturn("incompatible_type");
         when(job.getInitialResultsIndexName()).thenReturn("shared");
 
@@ -815,9 +794,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             "1000000000",
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            "400000000",
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            "400000000"
         );
         DiscoveryNodes nodes = DiscoveryNodes.builder()
             .add(
@@ -849,7 +826,7 @@ public class JobNodeSelectorTests extends ESTestCase {
 
         Job job = mock(Job.class);
         when(job.getId()).thenReturn("incompatible_type_job");
-        when(job.getJobVersion()).thenReturn(MlConfigVersion.CURRENT);
+        when(job.getJobVersion()).thenReturn(Version.CURRENT);
         when(job.getJobType()).thenReturn("incompatible_type");
         when(job.getInitialResultsIndexName()).thenReturn("shared");
 
@@ -883,21 +860,11 @@ public class JobNodeSelectorTests extends ESTestCase {
     }
 
     public void testSelectLeastLoadedMlNode_noNodesMatchingModelSnapshotMinVersion() {
-        Map<String, String> nodeAttr1 = Map.of(
+        Map<String, String> nodeAttr = Map.of(
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             "1000000000",
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            "400000000",
-            MachineLearning.ML_CONFIG_VERSION_NODE_ATTR,
-            "7.2.0"
-        );
-        Map<String, String> nodeAttr2 = Map.of(
-            MachineLearning.MACHINE_MEMORY_NODE_ATTR,
-            "1000000000",
-            MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            "400000000",
-            MachineLearning.ML_CONFIG_VERSION_NODE_ATTR,
-            "7.1.0"
+            "400000000"
         );
         DiscoveryNodes nodes = DiscoveryNodes.builder()
             .add(
@@ -905,9 +872,9 @@ public class JobNodeSelectorTests extends ESTestCase {
                     "_node_name1",
                     "_node_id1",
                     new TransportAddress(InetAddress.getLoopbackAddress(), 9300),
-                    nodeAttr1,
+                    nodeAttr,
                     ROLES_WITH_ML,
-                    VersionInformation.inferVersions(Version.fromString("7.2.0"))
+                    VersionInformation.inferVersions(Version.fromString("6.2.0"))
                 )
             )
             .add(
@@ -915,9 +882,9 @@ public class JobNodeSelectorTests extends ESTestCase {
                     "_node_name2",
                     "_node_id2",
                     new TransportAddress(InetAddress.getLoopbackAddress(), 9301),
-                    nodeAttr2,
+                    nodeAttr,
                     ROLES_WITH_ML,
-                    VersionInformation.inferVersions(Version.fromString("7.1.0"))
+                    VersionInformation.inferVersions(Version.fromString("6.1.0"))
                 )
             )
             .build();
@@ -931,7 +898,7 @@ public class JobNodeSelectorTests extends ESTestCase {
 
         Job job = BaseMlIntegTestCase.createFareQuoteJob("job_with_incompatible_model_snapshot")
             .setModelSnapshotId("incompatible_snapshot")
-            .setModelSnapshotMinVersion(MlConfigVersion.fromString("7.3.0"))
+            .setModelSnapshotMinVersion(Version.fromString("6.3.0"))
             .build(new Date());
         cs.nodes(nodes);
         metadata.putCustom(PersistentTasksCustomMetadata.TYPE, tasks);
@@ -946,7 +913,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             node -> nodeFilter(node, job)
         );
         PersistentTasksCustomMetadata.Assignment result = jobNodeSelector.selectNode(10, 2, 30, MAX_JOB_BYTES, false);
-        assertThat(result.getExplanation(), containsString("job's model snapshot requires a node of version [7.3.0] or higher"));
+        assertThat(result.getExplanation(), containsString("job's model snapshot requires a node of version [6.3.0] or higher"));
         assertNull(result.getExecutorNode());
     }
 
@@ -955,9 +922,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             "1000000000",
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            "400000000",
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            "400000000"
         );
         DiscoveryNodes nodes = DiscoveryNodes.builder()
             .add(
@@ -1011,9 +976,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             "1000000000",
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            "400000000",
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            "400000000"
         );
         DiscoveryNodes nodes = DiscoveryNodes.builder()
             .add(
@@ -1212,9 +1175,7 @@ public class JobNodeSelectorTests extends ESTestCase {
             MachineLearning.MACHINE_MEMORY_NODE_ATTR,
             Long.toString(machineMemory),
             MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
-            Long.toString(machineMemory / 2),
-            MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-            MlConfigVersion.CURRENT.toString()
+            Long.toString(machineMemory / 2)
         );
 
         ClusterState.Builder cs = fillNodesWithRunningJobs(nodeAttr, numNodes, maxRunningJobsPerNode);
@@ -1255,7 +1216,7 @@ public class JobNodeSelectorTests extends ESTestCase {
                     "not_ml_node_name",
                     "_node_id",
                     new TransportAddress(InetAddress.getLoopbackAddress(), 9300),
-                    Map.of(MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR, MlConfigVersion.CURRENT.toString()),
+                    Collections.emptyMap(),
                     ROLES_WITHOUT_ML
                 )
             )
@@ -1268,9 +1229,7 @@ public class JobNodeSelectorTests extends ESTestCase {
                         MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
                         "10",
                         MachineLearning.MACHINE_MEMORY_NODE_ATTR,
-                        Long.toString(ByteSizeValue.ofGb(30).getBytes()),
-                        MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-                        MlConfigVersion.CURRENT.toString()
+                        Long.toString(ByteSizeValue.ofGb(30).getBytes())
                     ),
                     ROLES_WITH_ML
                 )
@@ -1284,9 +1243,7 @@ public class JobNodeSelectorTests extends ESTestCase {
                         MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
                         "10",
                         MachineLearning.MACHINE_MEMORY_NODE_ATTR,
-                        Long.toString(ByteSizeValue.ofGb(30).getBytes()),
-                        MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-                        MlConfigVersion.CURRENT.toString()
+                        Long.toString(ByteSizeValue.ofGb(30).getBytes())
                     ),
                     ROLES_WITH_ML
                 )
@@ -1300,9 +1257,7 @@ public class JobNodeSelectorTests extends ESTestCase {
                         MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
                         "10",
                         MachineLearning.MACHINE_MEMORY_NODE_ATTR,
-                        Long.toString(ByteSizeValue.ofGb(10).getBytes()),
-                        MlConfigVersion.ML_CONFIG_VERSION_NODE_ATTR,
-                        MlConfigVersion.CURRENT.toString()
+                        Long.toString(ByteSizeValue.ofGb(10).getBytes())
                     ),
                     ROLES_WITH_ML
                 )
@@ -1413,7 +1368,7 @@ public class JobNodeSelectorTests extends ESTestCase {
         builder.addTask(
             MlTasks.dataFrameAnalyticsTaskId(id),
             MlTasks.DATA_FRAME_ANALYTICS_TASK_NAME,
-            new StartDataFrameAnalyticsAction.TaskParams(id, MlConfigVersion.CURRENT, allowLazyStart),
+            new StartDataFrameAnalyticsAction.TaskParams(id, Version.CURRENT, allowLazyStart),
             new PersistentTasksCustomMetadata.Assignment(nodeId, "test assignment")
         );
         if (state != null) {
@@ -1425,6 +1380,6 @@ public class JobNodeSelectorTests extends ESTestCase {
     }
 
     private static TaskParams createTaskParams(String id) {
-        return new TaskParams(id, MlConfigVersion.CURRENT, false);
+        return new TaskParams(id, Version.CURRENT, false);
     }
 }
